style: fix hero section picture overflow

--- a/src/components/HeroSectionNew.module.css
+++ b/src/components/HeroSectionNew.module.css
@@ -80,7 +80,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
    
 }
 
@@ -145,7 +145,8 @@
 
 .divFoto {
     width: 40%;
-    height: 100vh;
+    /* height: 100vh; */
+    height: 100%;
 }
 
 .divFoto > img {
@@ -189,6 +190,7 @@
        width: 100%;
         z-index: 10;
         padding-top: 70px;
+        justify-content: flex-start;
         padding-left: 40px;
     }
 
